[tool.poetry]
name = "mvp-portfolio-status"
version = "0.1.0"
description = ""
authors = ["Bruno Mesquita Zamberlan <brunomesquitazamberlan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
firebase-admin = "^6.5.0"
pandas = "^2.2.2"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
